--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     height: 180px;
     background: #fff;
     border-radius: 6px;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 50%;
     transform: translate(-50%,-50%) scale(0.1);
